--- a/common/src/main/resources/assets/dyeable_shulkers/lang/zh_cn.json
+++ b/common/src/main/resources/assets/dyeable_shulkers/lang/zh_cn.json
@@ -1,3 +1,5 @@
 {
+  "modmenu.descriptionTranslation.dyeable_shulkers": "为你的潜影贝染色吧！",
+  "fml.menu.mods.info.description.dyeable_shulkers": "为你的潜影贝染色吧！",
   "dyeable_shulkers.subtitle.bocchi_sound": "波奇酱可爱捏"
 }
