--- a/common/src/main/resources/assets/dyeable_shulkers/lang/en_us.json
+++ b/common/src/main/resources/assets/dyeable_shulkers/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "modmenu.descriptionTranslation.dyeable_shulkers": "Dye your Shulker & Shulker Box!",
   "fml.menu.mods.info.description.dyeable_shulkers": "Dye your Shulker & Shulker Box!",
-  "dyeable_shulkers.subtitle.bocchi_sound": "Bocchi Chan Kawaii"
+  "dyeable_shulkers.subtitle.bocchi_sound": "Bocchi Chan Kawaii",
+  "dyeable_shulkers.subtitle.bocchi_shakai_ga_kowai_sound": "絶対いやだ！働きたくない！！怖い！社会が怖い！"
 }
