--- a/common/src/main/resources/assets/dyeable_shulkers/lang/ja_jp.json
+++ b/common/src/main/resources/assets/dyeable_shulkers/lang/ja_jp.json
@@ -1,3 +1,4 @@
 {
-  "dyeable_shulkers.subtitle.bocchi_sound": "ぼっちちゃん可愛いね"
+  "dyeable_shulkers.subtitle.bocchi_sound": "ぼっちちゃん可愛いね",
+  "dyeable_shulkers.subtitle.bocchi_shakai_ga_kowai_sound": "絶対いやだ！働きたくない！！怖い！社会が怖い！"
 }
