--- a/common/src/main/resources/assets/dyeable_shulkers/lang/zh_cn.json
+++ b/common/src/main/resources/assets/dyeable_shulkers/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "modmenu.descriptionTranslation.dyeable_shulkers": "为你的潜影贝与潜影盒染色吧！",
   "fml.menu.mods.info.description.dyeable_shulkers": "为你的潜影贝与潜影盒染色吧！",
-  "dyeable_shulkers.subtitle.bocchi_sound": "波奇酱可爱捏"
+  "dyeable_shulkers.subtitle.bocchi_sound": "波奇酱可爱捏",
+  "dyeable_shulkers.subtitle.bocchi_shakai_ga_kowai_sound": "絶対いやだ！働きたくない！！怖い！社会が怖い！"
 }
